--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-  <meta charset="utf-8" />
-  <title>Hide & Seek Map</title>
+  <meta charset="UTF-8" />
+  <title>Карта Hide & Seek</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-  <style>#map { height: 100vh; }</style>
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-o5AvbN5DtcFZC6Jnt7iJ1iFzQj3Wy+MkGkV3kD+ZV6c="
+    crossorigin=""
+  />
+  <style>
+    html, body, #map {
+      height: 100%;
+      margin: 0;
+    }
+  </style>
 </head>
 <body>
   <div id="map"></div>
 
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-  <script src="map.js"></script>
+  <script
+    src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-o5MljF2V1tJ4aJD6R5Z+f0mkpFZ5OtMQErImlqWT+fQ="
+    crossorigin=""
+  ></script>
+  <script src="./js/map.js"></script>
 </body>
 </html>
