--- a/index.html
+++ b/index.html
@@ -4,18 +4,15 @@
   <meta charset="UTF-8" />
   <title>Карта Hide & Seek</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    integrity="sha256-o5AvbN5DtcFZC6Jnt7iJ1iFzQj3Wy+MkGkV3kD+ZV6c="
-    crossorigin=""
-  />
-  <style>
-    html, body, #map {
-      height: 100%;
-      margin: 0;
-    }
-  </style>
+  <!-- ИСПРАВЛЕННЫЙ -->
+<link
+  rel="stylesheet"
+  href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+/>
+<script
+  src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+></script>
+
 </head>
 <body>
   <div id="map"></div>
