--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
   <meta charset="UTF-8" />
   <title>Карта Hide & Seek</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!-- Leaflet CSS -->
 <link
   rel="stylesheet"
   href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
 />
+
+<!-- Leaflet JS -->
 <script
   src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
 ></script>
+
 
 </head>
 <body>
